# shell-dsl

./: .travis.yml  ChangeLog.md  README.md  shell-dsl.cabal
examples/: Example.hs
src/System/: ShellDSL.hs
tests/: ShellDSLTests.hs  tasty.hs
