name: shell-dsl
category: System
version: 0.0.1
license: MIT
license-file: LICENSE
author: Johan Kiviniemi <devel@johan.kiviniemi.name>
maintainer: Johan Kiviniemi <devel@johan.kiviniemi.name>
stability: provisional
homepage: https://github.com/ion1/shell-dsl
bug-reports: https://github.com/ion1/shell-dsl/issues
copyright: Copyright © 2014 Johan Kiviniemi
synopsis: A library for the generation of shell scripts
description:
  ShellDSL is a library for the generation of POSIX shell scripts with the
  appropriate escaping of unsafe parameters.
  .
  Example of usage: (full example in @examples@ and in module documentation)
  .
  > main = do
  >   files <- getDirectoryContents "."
  >   ...
  >   Sh.hPut handle (script files)
  >
  > script paths = Sh.unlines
  >   [ "#!/bin/sh"
  >   , "set -eu"
  >   , Sh.unwords ("ls -dl --" : map Sh.escFilePath paths)
  >   ]
tested-with: GHC == 7.8.2

build-type: Simple
cabal-version: >= 1.10
extra-source-files:
  .gitignore
  .travis.yml
  ChangeLog.md
  examples/Example.hs
  README.md

source-repository head
  type: git
  location: https://github.com/ion1/shell-dsl.git

library
  exposed-modules: System.ShellDSL
  hs-source-dirs: src
  build-depends: base >=4.6 && <4.8
               , bytestring == 0.10.*
               , process == 1.2.*
               , text >= 0.11 && < 1.2
  if impl(ghc < 7.8)
    build-depends: bytestring-builder == 0.10.*
  default-language: Haskell2010
  ghc-options: -Wall

test-suite tasty-tests
  type: exitcode-stdio-1.0
  main-is: tasty.hs
  other-modules: ShellDSLTests
  hs-source-dirs: tests
  build-depends: base
               , bytestring
               , deepseq
               , directory
               , process
               , QuickCheck >= 2.7 && < 3
               , quickcheck-instances
               , shell-dsl
               , tasty == 0.8.*
               , tasty-quickcheck == 0.8.*
               , temporary
               , text
  if !os(windows) && !os(darwin)
    build-depends: unix
  default-language: Haskell2010
  ghc-options: -threaded -Wall

test-suite doctests
  type: exitcode-stdio-1.0
  main-is: doctests.hs
  hs-source-dirs: tests
  build-depends: base
               , directory
               , doctest >= 0.9
               , filepath
               , mtl
  default-language: Haskell2010
  ghc-options: -threaded -Wall
